Fixing the font spacing by 5 px everytime would be cumbersome. I think this thing is ready to deploy other than the new logo. AWW YISSS.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,20 @@ body {
 	color: white;
 
 	height: 100%;
-
 }
 
 a {
-	color: #00B7FF;
+	/* Right now this junk is for Contact Us mail link */
+	color: white;
+	font-size: 20px;
+	-webkit-transition: color 0.2s;
+  	transition: color 0.2s;
+}
+
+a:hover, a:focus {
+	color: #d35400; /* Pumpkin! */
+  	text-decoration: none;
+
 }
 
 h3 {
